--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,7 +10,5 @@ updates:
     labels:
       - "dependencies"
     commit-message:
-      prefix: "chore(deps):"
-      prefix-major: "chore(deps)!:"
-      prefix-minor: "chore(deps):"
-      prefix-patch: "chore(deps):"
+      prefix: "chore(deps)"
+      include: "scope"
