Update .gitignore to properly exclude build binaries
- Changed /cwalk to cwalk (no leading slash) to exclude anywhere in tree
- Removed /cwalk_bin duplicate entry
- Added cwalk_bin to the main Build outputs section
- Consolidated binary exclusions for consistency

This ensures build artifacts won't be accidentally committed in the future.

--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,8 @@
 *.a
 *.so
 *.dylib
-
-# Test binaries
+cwalk
+cwalk_bin
 *.test
 
 # Go build cache
@@ -36,4 +36,3 @@
 
 # Go mod cache
 vendor/
-/cwalk
